--- a/main.css
+++ b/main.css
@@ -4,14 +4,20 @@
    margin: 0;
    box-sizing: border-box;
 }
+body{
+   background: #fff;
+}
 .cv_container{
    width: 90%;
    max-width: 996px;
    margin: 0 auto;
-   padding: 30px 0;
+   padding: 30px;
    font-family: 'Roboto',
    sans-serif;
-   
+   box-shadow: 5px 5px 10px #cbced1,
+   -5px -5px 10px #cbced1;
+   border-radius: 20px;
+   background: #fefefe;
 }
 .name{
    display: grid;
