--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@
    padding: 30px 0;
    font-family: 'Roboto',
    sans-serif;
+   box-shadow: 5px 5px 10px #cbced1,
+   -5px -5px 10px #cbced1;
    
 }
 .name{
