--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
    width: 90%;
    max-width: 996px;
    margin: 0 auto;
-   padding: 30px 0;
+   padding: 30px;
    font-family: 'Roboto',
    sans-serif;
    box-shadow: 5px 5px 10px #cbced1,
